style.css
@font-face{
  font-family: "Sul Mono";
  src:url('asset/SulMono-Regular.otf');
  font-weight:400;
  font-style:normal;
}
@font-face{
  font-family: "Spot Mono";
  src:url('asset/SpotMono-Light.ttf');
  font-weight:300;
  font-style:normal;
}
@font-face{
  font-family: "Suisse Mono";
  src:url('asset/SuisseMono-Regular.otf');
  font-weight:400;
  font-style:normal;
}
/*---------------------------variables------------------------------*/
:root{
    --red:#FF5739;
    --yellow:#DFFF6A;
    --green: #52F88A;
    --blue:#3AD1FF;
    --purple:#D66DFF;
    --light: #B5FFCD;
    --med:#39473F;
    --dark: #161917;
    --outline: 1px solid var(--light);
    --font-size: 16px !important;
    --line-height:1.32 !important;
    --font: "Spot Mono", monospace;

    --dither-color-1: var(--dark);
    --dither-color-2: var(--light);
}
/*-------------------------global edits for the site-------------------*/
html{
    margin:0;
    padding:0;
}
body{
    top:0px;
    left:0px;
    padding:0px;
    margin:0px;
    width:100vw;
    height: calc(var(--vh, 1vh) * 100);
    overflow:hidden;
    background: var(--dark);
    font-size:var(--font-size);
    line-height:var(--line-height);
    color:var(--light) !important;
    font-family: "Spot Mono";
    font-size: var(--font-size);
}
.ui-resizable{
    position:fixed !important;
}
body::selection{
    background:var(--light);
    color:var(--dark);
}
/*-----------------------------loader--------------------------------*/
#loader{
    z-index:10;
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
    background:var(--dark);
    text-align:center;
    margin:0;
    padding:0;
}
#loader p{
    width:100vw;
    height:15px;
}
#retina{
    opacity:0;
}
#stack{
    opacity:0;
}
#granted{
    opacity:0;
}
/*------------------edits for the actual terminal-------------------*/
#terminal{
    position:absolute;
    background:var(--dark) !important;
    color:var(--light) !important;

    display: flex;
    flex-direction: column;

    width:66vw;
    height: calc(var(--vh, 1vh) * 66);
    top: calc(var(--vh, 1vh) * 17);
    left:17vw;
    transition: transform .5s;
    z-index:1;
    --animation: terminal-underline;
}
.terminal{
    --base-background:var(--dark) !important;
    --base-color:var(--light) !important;
}

.terminal, .cmd, .terminal .terminal-output div div, .cmd .prompt {
    font-size: var(--font-size);
    line-height: 24px;
    }
.terminal-scroller{
    padding-top:0px !important;
    scrollbar-color:var(--light) var(--dark) !important;

    flex: 1 1 auto; /* takes all remaining height */
    overflow-y: auto;
}
.cmd-editable, .terminal .terminal-fill, .terminal-scroller {
    padding: 0px 12px 0px 12px !important;
}
.logo{
    margin:12px 12px 6px 12px;

    flex: 0 0 auto; /* fixed height */
}
.logo img {
  height: auto; 
  display: block;
  margin-bottom:9px;
}
.indent{
   display:inline-block;
   width:120px;
}
.text{
    max-width:500px;
    margin-bottom:9px;
}
.terminal-wrapper{
    --background: transparent;
    background: transparent !important;
}
/*----------------------overriding styling for JQuery Terminal--------*/
@supports (--css:variables) {
    .cmd, .cmd div, .cmd span[data-text]:not(.cmd-inverted):not(.token):not(.emoji), .terminal, .terminal-output>:not(.raw) a, .terminal-output>:not(.raw) div, .terminal-output>:not(.raw) span[data-text]:not(.token):not(.inverted):not(.terminal-inverted):not(.cmd-inverted):not(.terminal-error):not(.emoji), .terminal.external [data-text]{
        background: transparent;
    }
    .terminal, .terminal-output>:not(.raw) a, .terminal-output>:not(.raw) div, .terminal-output>:not(.raw) span{
        font-size:var(--font-size) !important;
    }
    .cmd, .cmd div, .cmd span {
        font-size:var(--font-size) !important;
    }
    .cmd div, .terminal, .terminal .terminal-output>:not(.raw)>div, .terminal.external div{
        line-height:var(--line-height) !important;
    }
}
/*----------------collective edits for all terminal windows------------*/
.termish, .dialog{
    position:fixed;
    background:var(--dark);
    color:var(--light);
    box-sizing: border-box;
    border: var(--outline);
    border-radius:2px 2px 2px 2px !important;
}
.termish p, .dialog p{
    padding:3px 12px 0px 12px;
}
/*------------------------popups / dialog-------------------------*/
.dialog .name{
    padding-left:0;
}
.dialog .quit{
    float:right;
}
.dialog .status-bar{
    padding-bottom:10px;
}
/*---------------------decoy-------------------*/
.decoy{
    right:50px;
    width:40vw;
    height: calc(var(--vh, 1vh) * 40);
    z-index:-2 !important;
    top:50px;
}
.decoy, .decoy .status-bar span{
    color: var(--med);
    border: 1px solid var(--med);
}
.decoy .status-bar{
    color:var(--med);
    border-bottom: 1px solid var(--med);
}
/*-----------------decoy desktop icons------------*/
.folder{
   position:absolute;
   color:var(--med);
   top:12px;
   left:12px;
   font-size:12px;
   text-align:center;
   z-index:-1 !important;
}
.folder img{
    width:70px;
    padding-bottom:4px;
}
.folder span{
    cursor:default;
}
.folder:nth-of-type(2){
    top:108px;
}
.folder:nth-of-type(3){
    top:calc(100% - 88px);
}

/*---------individual edits for each terminal window--------------*/  
#pic{
    width:250px;
    height:286.5px;
    top: calc(var(--vh, 1vh) * 40);
    left:50px;
    overflow:hidden;
}
#mainframe{
    width:500px;
    height:250px;
    left: calc(100vw - 550px);
    top:calc(100vh - 300px);
    opacity:0;
}
.search{
    padding-top:10px;
}
.frame-1{
    position:absolute;
    width:100%;
    top:37.5px;
    display:flex;
    flex-direction:row;
    justify-content:space-between;
}
.frame-1 p{
    width: 264px;
}
.radar{
    display:block;
    padding: 12px 12px 6px 12px;
}
.frame-2{
    position:absolute;
    top:37.5px;
    height:163.5px;
    height: 200.5px;
    display:flex;
    flex-direction:column;
    justify-content:space-between;
}
.frame-2 p{
    width:420px;
    margin-top:12px;
}
.frame-2 span{
    transition:.2s;
    background:var(--dark);
    padding:8px;
    border:var(--outline);
    border-radius:2px;
    margin: 0 0 0 12px;
}
.buttons{
    padding: 8px 0 8px 0;
}
/*----------------universal status bar styling for the terminals---------*/
.status-bar{
    font-size:12px;
    position:relative;
    border-radius: 4px 4px 0 0;
    margin:12px;
    margin-bottom:0px;
    border-bottom:var(--outline);
    white-space:nowrap;
}
.status-bar span{
    display:inline-block;
    width:12px;
    height:12px;
    border:var(--outline);
    color: var(--light);
    border-radius:24px;
    text-align:center;
    line-height:1.05;
    margin-bottom:10px;
}
.quit, .min, .max{
    transition:.4s;
}
.quit:hover, .min:hover, .max:hover, .frame-2 span:hover{
   background:var(--light);
   color:var(--dark);
   cursor:pointer;
}
.quit{
    transform:rotate(45deg);
}
.name{
    display:inline;
    position:relative;
    padding-left:12px;
    color:var(--light);
    cursor:default;
    white-space:nowrap;
}
/*-----------classes as conditions----------*/
.none{
    display:none;
    z-index:0;
}
.twofifty{
    height:250px !important;
}
/*-------------------status bar functions-------------------*/
.maxed{
    width:94vw !important;
    height: calc(var(--vh, 1vh) * 94) !important;
    left:3vw !important;
    top: calc(var(--vh, 1vh) * 3) !important;
}
#pic.maxed{
    width:400px !important;
    height: 438px !important;
    left: calc(50vw - 200px) !important;
    top:calc(50% - 219px) !important;
}
#pic.maxed img{
    width: 400px;
}
.minned{
    height:38px !important;
}
.minned .status-bar{
    border-bottom:0px solid transparent !important;
}
.minned .dither-canvas{
    display:none;
}
/*---------------------------dithered------------------------*/
canvas.dither-canvas {
  image-rendering: pixelated;
  image-rendering: crisp-edges;
  display: block;
}
/*---------media queries for a responsive layout across different screen sizes-------*/
@media screen and (max-width: 700px) {
    #terminal{
        width:100vw !important;
        height: calc(var(--vh, 1vh) * 100) !important;
        top: 0;
        left:0vw;
        border:0px;
    }
    #pic{
        display:none;
    }
    .folder{
        display:none;
    }
    #mainframe{
        width:calc(100% - 22px);
        top:auto;
        left:11px;
        transform-origin:center;
    }
    .frame-1{
        width:100%;
    }
    .frame-2 p{
        width:calc(100% - 24px);
    }
    .decoy{
        display:none;
    }
    .logo{
        padding-bottom:6px;
    }
    .min:hover, .max:hover, .quit:hover{
        cursor:default;
        background:var(--dark);
        color:var(--light);
    }
    .max, .min, .quit{
        pointer-events: none !important;
    }
    @media screen and (max-width: 550px) {
    .frame-1{
        display:flex;
        flex-direction:column;
    }
    }

}

